Fixed work-break on blog posts

--- a/assets/blog.css
+++ b/assets/blog.css
@@ -6,7 +6,7 @@
 
 article {
     width: 90%;
-    min-height: 90%;
+    min-height: 50vh;
     padding: 10px;
     border: 2px solid black;
     border-radius: 4px;
@@ -15,23 +15,23 @@ article {
     text-align: left;
 }
 
+#first-article p {
+    word-break: normal;
+    white-space: normal;
+}
+
 #blog-container {
-    height: 86vh;
+    height: 100%;
     width: 100%;
     display: flex; 
-    flex-direction: column;   
+    flex-direction: column; 
+    flex-wrap: wrap;  
 }
 
 .dark {
     background-color: black;
     color: white;
 }
-
-/*
-.dark-borders {
-    border-bottom-color: white;
-}
-*/
 
 #header-box {
     width: 100%;
@@ -47,6 +47,7 @@ article {
     margin-right: 40px;
 }
 
+
 #footer {
     width: 100%;
     height: 80px;
@@ -58,7 +59,7 @@ article {
 }
 
 #footer a {
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
@@ -139,3 +140,17 @@ input:checked + .slider:before {
     margin-left: 4px;
 }
 
+#back-btn {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+
+.noto-sans-font {
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
