--- a/assets/styles.css
+++ b/assets/styles.css
@@ -48,7 +48,10 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+}
+
+#right-box h2 {
+    margin-left: 20px;
 }
 
 #container {
@@ -199,9 +202,9 @@ input:checked + .slider:before {
 .dark-mode {
     background-color: black;
     color: white;
-    /*border color not working in dark mode*/
     border-color: white;
 }
+
 
 #footer {
     width: 100%;
@@ -212,13 +215,29 @@ input:checked + .slider:before {
     padding-top: 20px;
 }
 
+#footer a {
+    color: white;
+    text-decoration: none;
+}
+
+#footer a:hover {
+    text-decoration: underline;
+}
+
 #msg-box {
     display: flex;
     flex: wrap;
     justify-content: center;
 }
 
-
+.noto-sans-font {
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 450;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
 
 
 
